# network-app

./: CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  compose.yaml  notes.txt  random_conn.c  user.c  user.h
docker/: Dockerfile  compose.yaml
docs/: network-app.drawio  notes.txt
src/base/: user.c  user.h
src/network/: gossip.c  gossip.h  network.c  network.h  table.c  table.h
src/routing/: routing.h
src/util/: dijkstra.h  util.h
tools/: random_conn.c
